# linting-poc-ruff

./: pyproject.toml
src/: main.py
src/numbers/: __init__.py
