[project]
name = "numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cardeaf", email = "afc@integrichain.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 70

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501","UP"]

